k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: sinatra-webapp
  name: sinatra-webapp
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sinatra-webapp
  replicas: 2   # Replica added to our manifest
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sinatra-webapp
    spec:
      containers:
      - env:
        - name: PORT
          value: "4567"
        image: public.ecr.aws/s6k6o8r8/sinatra-webapp-sample
        imagePullPolicy: Always
        name: sinatra-webapp
        ports:
        - containerPort: 4567
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 4567
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
