k8s/service-externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: service-externalec2service
spec:
  type: ExternalName
  externalName: ec2-44-223-1-181.compute-1.amazonaws.com
