k8s/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: sinatra-webapp
  ports:
    - port: 8080           # Port number that resources in cluster will use to communicate
      targetPort: 4567     # Port number the container is listening to
      nodePort: 30001      # External port to connect to node
